--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,9 @@
     <properties>
          <!-- Release Info -->
         <jboss.as.release.version>${project.version}</jboss.as.release.version>
-        <jboss.as.release.codename>Brontes</jboss.as.release.codename>
-        <jboss.as.scm.url>https://github.com/jbossas/jboss-as</jboss.as.scm.url>
-        <jboss.as.scm.connection>git@github.com:jbossas/jboss-as.git</jboss.as.scm.connection>
+        <jboss.as.release.codename>Tiger</jboss.as.release.codename>
+        <jboss.as.scm.url>https://github.com/seeburger-ag/jboss-as</jboss.as.scm.url>
+        <jboss.as.scm.connection>git@github.com:seeburger-ag/jboss-as.git</jboss.as.scm.connection>
 
         <!-- Build configuration -->
         <maven.compiler.source>1.6</maven.compiler.source>
