--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
         <version.org.apache.juddi.juddi-client>3.1.3</version.org.apache.juddi.juddi-client>
         <version.org.apache.juddi.uddi-ws>3.1.3</version.org.apache.juddi.uddi-ws>
         <version.org.apache.juddi.scout>1.2.6</version.org.apache.juddi.scout>
-        <version.org.apache.httpcomponents.httpclient>4.1.2</version.org.apache.httpcomponents.httpclient>
+        <version.org.apache.httpcomponents.httpclient>4.1.3</version.org.apache.httpcomponents.httpclient>
         <version.org.apache.httpcomponents.httpcore>4.1.4</version.org.apache.httpcomponents.httpcore>
         <version.org.apache.neethi>3.0.1</version.org.apache.neethi>
         <version.org.apache.openjpa>2.1.1</version.org.apache.openjpa>
@@ -171,7 +171,7 @@
         <version.org.jboss.metadata>7.0.1.Final</version.org.jboss.metadata>
         <version.org.jboss.mod_cluster>1.2.0.Final</version.org.jboss.mod_cluster>
         <version.org.jboss.modules.jboss-modules>1.1.1.GA</version.org.jboss.modules.jboss-modules>
-        <version.org.jboss.msc.jboss-msc>1.0.2.GA</version.org.jboss.msc.jboss-msc>
+        <version.org.jboss.msc.jboss-msc>1.0.2.SEE1-SNAPSHOT</version.org.jboss.msc.jboss-msc>
         <version.org.jboss.netty>3.2.6.Final</version.org.jboss.netty>
         <version.org.jboss.osgi.framework>1.1.8.Final</version.org.jboss.osgi.framework>
         <version.org.jboss.osgi.http>1.0.5</version.org.jboss.osgi.http>
@@ -4308,7 +4308,7 @@
             </dependency>
 
             <dependency>
-                <groupId>org.jboss.msc</groupId>
+                <groupId>com.seeburger.as</groupId>
                 <artifactId>jboss-msc</artifactId>
                 <version>${version.org.jboss.msc.jboss-msc}</version>
             </dependency>
