https://issues.jboss.org/browse/AS7-5163 - fixing timeout waiting for service changed groupId of jboss-msc to com.seeburger

--- a/arquillian/testenricher-msc/pom.xml
+++ b/arquillian/testenricher-msc/pom.xml
@@ -44,7 +44,7 @@
     </dependency>
 
     <dependency>
-        <groupId>org.jboss.msc</groupId>
+        <groupId>com.seeburger.as</groupId>
         <artifactId>jboss-msc</artifactId>
     </dependency>
   </dependencies>
