--- a/naming/pom.xml
+++ b/naming/pom.xml
@@ -58,7 +58,7 @@
             <artifactId>jboss-remote-naming</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
         <dependency>
