--- a/arquillian/service/pom.xml
+++ b/arquillian/service/pom.xml
@@ -88,7 +88,7 @@
       <artifactId>jboss-modules</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.msc</groupId>
+      <groupId>com.seeburger.as</groupId>
       <artifactId>jboss-msc</artifactId>
     </dependency>
     <!-- Provided dependencies -->
