--- a/clustering/common/pom.xml
+++ b/clustering/common/pom.xml
@@ -43,7 +43,7 @@
             <artifactId>jboss-threads</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
         <dependency>
