--- a/clustering/web-spi/pom.xml
+++ b/clustering/web-spi/pom.xml
@@ -47,7 +47,7 @@
             <artifactId>jboss-metadata-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
         <dependency>
