--- a/deployment-repository/pom.xml
+++ b/deployment-repository/pom.xml
@@ -69,7 +69,7 @@
             <artifactId>jboss-modules</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
         <dependency>
