--- a/ee/pom.xml
+++ b/ee/pom.xml
@@ -74,7 +74,7 @@
             <artifactId>jboss-metadata-ear</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
         <dependency>
