--- a/jdr/jboss-as-jdr/pom.xml
+++ b/jdr/jboss-as-jdr/pom.xml
@@ -41,7 +41,7 @@
             <artifactId>commons-cli</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
         <dependency>
