--- a/jmx/pom.xml
+++ b/jmx/pom.xml
@@ -68,7 +68,7 @@
             <artifactId>jboss-common-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
         <dependency>
