--- a/jpa/core/pom.xml
+++ b/jpa/core/pom.xml
@@ -146,7 +146,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
 
