--- a/jpa/hibernate4/pom.xml
+++ b/jpa/hibernate4/pom.xml
@@ -175,7 +175,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
 
