--- a/jpa/spi/pom.xml
+++ b/jpa/spi/pom.xml
@@ -80,7 +80,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
 
