--- a/jpa/util/pom.xml
+++ b/jpa/util/pom.xml
@@ -65,7 +65,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
 
