--- a/jsr77/pom.xml
+++ b/jsr77/pom.xml
@@ -72,7 +72,7 @@
 		      <artifactId>jboss-ejb-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
         <dependency>
