--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -99,7 +99,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
 
