--- a/messaging/pom.xml
+++ b/messaging/pom.xml
@@ -61,7 +61,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
 
