--- a/remoting/pom.xml
+++ b/remoting/pom.xml
@@ -105,7 +105,7 @@
             <artifactId>jboss-marshalling</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
         <dependency>
