--- a/sar/pom.xml
+++ b/sar/pom.xml
@@ -80,7 +80,7 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
         <dependency>
