--- a/server/pom.xml
+++ b/server/pom.xml
@@ -122,7 +122,7 @@
             <artifactId>jboss-modules</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
         <dependency>
