--- a/weld/pom.xml
+++ b/weld/pom.xml
@@ -150,7 +150,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.msc</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-msc</artifactId>
         </dependency>
 
