--- a/pom.xml
+++ b/pom.xml
@@ -170,7 +170,7 @@
         <version.org.jboss.marshalling.jboss-marshalling-river>1.3.15.GA</version.org.jboss.marshalling.jboss-marshalling-river>
         <version.org.jboss.metadata>7.0.1.Final</version.org.jboss.metadata>
         <version.org.jboss.mod_cluster>1.2.0.Final</version.org.jboss.mod_cluster>
-        <version.org.jboss.modules.jboss-modules>1.1.1.GA</version.org.jboss.modules.jboss-modules>
+        <version.org.jboss.modules.jboss-modules>1.1.1.SEE1-SNAPSHOT</version.org.jboss.modules.jboss-modules>
         <version.org.jboss.msc.jboss-msc>1.0.2.SEE1-SNAPSHOT</version.org.jboss.msc.jboss-msc>
         <version.org.jboss.netty>3.2.6.Final</version.org.jboss.netty>
         <version.org.jboss.osgi.framework>1.1.8.Final</version.org.jboss.osgi.framework>
@@ -4314,7 +4314,7 @@
             </dependency>
 
             <dependency>
-                <groupId>org.jboss.modules</groupId>
+                <groupId>com.seeburger.as</groupId>
                 <artifactId>jboss-modules</artifactId>
                 <version>${version.org.jboss.modules.jboss-modules}</version>
             </dependency>
