https://community.jboss.org/thread/205456 Dependency Resolution - adopted jboss-modules groupid

--- a/pom.xml
+++ b/pom.xml
@@ -4314,7 +4314,7 @@
             </dependency>
 
             <dependency>
-                <groupId>com.seeburger.as</groupId>
+                <groupId>com.seeburger.modules</groupId>
                 <artifactId>jboss-modules</artifactId>
                 <version>${version.org.jboss.modules.jboss-modules}</version>
             </dependency>
