--- a/arquillian/service/pom.xml
+++ b/arquillian/service/pom.xml
@@ -21,9 +21,9 @@
   ~ 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  
+
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -84,7 +84,7 @@
       <artifactId>arquillian-test-impl-base</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.modules</groupId>
+      <groupId>com.seeburger.modules</groupId>
       <artifactId>jboss-modules</artifactId>
     </dependency>
     <dependency>
