--- a/deployment-repository/pom.xml
+++ b/deployment-repository/pom.xml
@@ -65,7 +65,7 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.seeburger.modules</groupId>
+            <groupId>org.jboss.modules</groupId>
             <artifactId>jboss-modules</artifactId>
         </dependency>
         <dependency>
