--- a/embedded/pom.xml
+++ b/embedded/pom.xml
@@ -86,7 +86,7 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.seeburger.modules</groupId>
+            <groupId>org.jboss.modules</groupId>
             <artifactId>jboss-modules</artifactId>
         </dependency>
         <dependency>
