Adopted to new jboss-ejb-client version, see https://community.jboss.org/message/764302 Automatic EJB reconnection mechanism fails if Version Handshake times out

--- a/arquillian/container-managed/pom.xml
+++ b/arquillian/container-managed/pom.xml
@@ -76,7 +76,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.jboss</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-ejb-client</artifactId>
             <scope>test</scope>
         </dependency>
