--- a/client/ejb/pom.xml
+++ b/client/ejb/pom.xml
@@ -48,7 +48,7 @@
     <dependencies>
 
         <dependency>
-            <groupId>org.jboss</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-ejb-client</artifactId>
         </dependency>
 
