--- a/appclient/pom.xml
+++ b/appclient/pom.xml
@@ -112,7 +112,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-ejb-client</artifactId>
         </dependency>
 
