--- a/jsr77/pom.xml
+++ b/jsr77/pom.xml
@@ -68,7 +68,7 @@
             <artifactId>jboss-common-core</artifactId>
         </dependency>
         <dependency>
-		      <groupId>org.jboss</groupId>
+		      <groupId>com.seeburger.as</groupId>
 		      <artifactId>jboss-ejb-client</artifactId>
         </dependency>
         <dependency>
