--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
         <version.org.jboss.classfilewriter>1.0.1.Final</version.org.jboss.classfilewriter>
         <version.org.jboss.common-core>2.2.17.GA</version.org.jboss.common-core>
         <version.org.jboss.com.sun.httpserver>1.0.0.Final</version.org.jboss.com.sun.httpserver>
-        <version.org.jboss.ejb-client>1.0.5.Final</version.org.jboss.ejb-client>
+        <version.org.jboss.ejb-client>1.0.5.SEE1-SNAPSHOT</version.org.jboss.ejb-client>
         <version.org.jboss.ejb3.ext-api>2.0.0</version.org.jboss.ejb3.ext-api>
         <version.org.jboss.iiop-client>1.0.0.Final</version.org.jboss.iiop-client>
         <version.org.jboss.interceptor>2.0.0.Final</version.org.jboss.interceptor>
@@ -3497,7 +3497,7 @@
             </dependency>
 
             <dependency>
-                <groupId>org.jboss</groupId>
+                <groupId>com.seeburger.as</groupId>
                 <artifactId>jboss-ejb-client</artifactId>
                 <version>${version.org.jboss.ejb-client}</version>
             </dependency>
