--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
         <version.org.jboss.classfilewriter>1.0.1.Final</version.org.jboss.classfilewriter>
         <version.org.jboss.common-core>2.2.17.GA</version.org.jboss.common-core>
         <version.org.jboss.com.sun.httpserver>1.0.0.Final</version.org.jboss.com.sun.httpserver>
-        <version.org.jboss.ejb-client>1.0.5.SEE1-SNAPSHOT</version.org.jboss.ejb-client>
+        <version.org.jboss.ejb-client>1.0.5.SEE1</version.org.jboss.ejb-client>
         <version.org.jboss.ejb3.ext-api>2.0.0</version.org.jboss.ejb3.ext-api>
         <version.org.jboss.iiop-client>1.0.0.Final</version.org.jboss.iiop-client>
         <version.org.jboss.interceptor>2.0.0.Final</version.org.jboss.interceptor>
@@ -171,7 +171,7 @@
         <version.org.jboss.metadata>7.0.1.Final</version.org.jboss.metadata>
         <version.org.jboss.mod_cluster>1.2.0.Final</version.org.jboss.mod_cluster>
         <version.org.jboss.modules.jboss-modules>1.1.1.GA</version.org.jboss.modules.jboss-modules>
-        <version.org.jboss.msc.jboss-msc>1.0.2.SEE1-SNAPSHOT</version.org.jboss.msc.jboss-msc>
+        <version.org.jboss.msc.jboss-msc>1.0.2.SEE1</version.org.jboss.msc.jboss-msc>
         <version.org.jboss.netty>3.2.6.Final</version.org.jboss.netty>
         <version.org.jboss.osgi.framework>1.1.8.Final</version.org.jboss.osgi.framework>
         <version.org.jboss.osgi.http>1.0.5</version.org.jboss.osgi.http>
