SEE-specific: changing version reference for Maven release build, which fails otherwise

--- a/testsuite/shared/pom.xml
+++ b/testsuite/shared/pom.xml
@@ -22,7 +22,7 @@
     <properties>
         <!-- Arquillian dependency versions -->
         <version.arquillian_core>${version.org.jboss.arquillian.core}</version.arquillian_core>
-        <version.arquillian_as7>${project.parent.version}</version.arquillian_as7>
+        <version.arquillian_as7>${project.version}</version.arquillian_as7>
         <version.xml.maven.plugin>1.0</version.xml.maven.plugin>
         <version.saxon>8.7</version.saxon>
     </properties>
