--- a/testsuite/shared/pom.xml
+++ b/testsuite/shared/pom.xml
@@ -17,16 +17,16 @@
     <version>7.1.1.SEE1-SNAPSHOT</version>
 
     <name>JBoss Application Server Test Suite: Shared</name>
-    
-    
+
+
     <properties>
         <!-- Arquillian dependency versions -->
         <version.arquillian_core>${version.org.jboss.arquillian.core}</version.arquillian_core>
-        <version.arquillian_as7>${project.version}</version.arquillian_as7>
+<!--         <version.arquillian_as7>${project.parent.version}</version.arquillian_as7> -->
         <version.xml.maven.plugin>1.0</version.xml.maven.plugin>
         <version.saxon>8.7</version.saxon>
     </properties>
-    
+
     <build>
         <plugins>
             <plugin>
@@ -36,7 +36,7 @@
                     <!-- TODO: Don't fail on checkstyle until AS7-2954 is fixed.  -->
                     <failsOnError>false</failsOnError>
                 </configuration>
-                
+
                 <executions>
                     <execution>
                         <id>check-style-ts-shared</id>
@@ -50,7 +50,7 @@
                         </configuration>
                     </execution>
                 </executions>
-                
+
             </plugin>
         </plugins>
     </build>
@@ -79,7 +79,7 @@
         <dependency>
             <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-as-arquillian-container-managed</artifactId>
-            <version>${version.arquillian_as7}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -88,5 +88,5 @@
         </dependency>
 
     </dependencies>
-    
+
 </project>
