--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -83,8 +83,8 @@
         <jbossas.ts.dir>${basedir}</jbossas.ts.dir>
         <!-- This project's root dir. -->
         <jbossas.project.dir>${jbossas.ts.dir}/..</jbossas.project.dir>
-        
-        
+
+
         <!-- Used to provide an absolute location for the distribution under test. -->
         <!-- This value is overridden in modules with the correct relative pathname. -->
         <jboss.dist>${project.basedir}/../build/target/jboss-as-${jboss.as.release.version}</jboss.dist>
@@ -110,8 +110,8 @@
         <jvm.args.securityManager></jvm.args.securityManager>
         <jvm.args.securityPolicy></jvm.args.securityPolicy>
         <jvm.args.security>${jvm.args.securityManager} ${jvm.args.securityPolicy}</jvm.args.security>
-        
-        
+
+
         <!-- JaCoCo - Code coverage (-Dcoverage). -->
         <jvm.args.jacoco></jvm.args.jacoco>
 
@@ -140,7 +140,7 @@
 
         <!-- Arquillian dependency versions -->
         <version.arquillian_core>${version.org.jboss.arquillian.core}</version.arquillian_core>
-        <version.arquillian_as7>${project.parent.version}</version.arquillian_as7>
+<!--         <version.arquillian_as7>${project.parent.version}</version.arquillian_as7> -->
         <version.saxon>8.7</version.saxon>
 
         <!-- Don't try to deploy the testsuite modules because they don't build jars -->
@@ -197,7 +197,7 @@
         <dependency>
             <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-as-arquillian-container-managed</artifactId>
-            <version>${version.arquillian_as7}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -357,7 +357,7 @@
                                     <parameters>
                                         <parameter><name>managementIPAddress</name>    <value>${node0}</value></parameter>
                                         <parameter><name>publicIPAddress</name>        <value>${node0}</value></parameter>
-                                        
+
                                         <parameter><name>udpMcastAddress</name>        <value>${mcast}</value></parameter>
                                         <parameter><name>diagnosticsMcastAddress</name><value>${mcast.jgroupsDiag}</value></parameter>
                                         <parameter><name>mpingMcastAddress</name>      <value>${mcast}</value></parameter>
@@ -645,7 +645,7 @@
             <activation><property><name>mcast.modcluster</name></property></activation>
             <properties> <mcast.modcluster >${mcast.modcluster}</mcast.modcluster> </properties>
         </profile>
-        
+
 
 
         <!-- Security policy.  ARQ-690, AS7-2823, AS7-2826. -->
@@ -971,7 +971,7 @@
                                                     </fileset>
                                                 </classfiles>
                                                 <sourcefiles encoding="UTF-8">
-                                                    <!-- 
+                                                    <!--
                                                          for i in $(find . -path './*/src/main/java'); do
                                                              DIR=`echo $i | sed 's|./||'`;
                                                              echo "<fileset dir=\"$DIR\"><include name=\"**/*.java\"/></fileset>";
@@ -1058,7 +1058,7 @@
                                             <html destdir ="${basedir}/target/coverage-report/html"/>
                                             <xml  destfile="${basedir}/target/coverage-report/coverage-report.xml"/>
                                             <csv  destfile="${basedir}/target/coverage-report/coverage-report.csv"/>
-                                        </report>                                        
+                                        </report>
                                     </target>
                                 </configuration>
                             </execution>
@@ -1074,7 +1074,7 @@
                 </plugins>
             </build>
         </profile>
-        
+
 
 
     </profiles>
