Referencing <groupId>com.seeburger.as</groupId> <artifactId>jboss-modules</artifactId> <version>1.1.1.SEE1</version>

--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -92,7 +92,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.modules</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-modules</artifactId>
         </dependency>
 
