--- a/osgi/service/pom.xml
+++ b/osgi/service/pom.xml
@@ -62,7 +62,7 @@
             <artifactId>jboss-as-server</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.modules</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-modules</artifactId>
         </dependency>
         <dependency>
