--- a/arquillian/service/pom.xml
+++ b/arquillian/service/pom.xml
@@ -84,7 +84,7 @@
       <artifactId>arquillian-test-impl-base</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.modules</groupId>
+      <groupId>com.seeburger.as</groupId>
       <artifactId>jboss-modules</artifactId>
     </dependency>
     <dependency>
