--- a/server/pom.xml
+++ b/server/pom.xml
@@ -118,7 +118,7 @@
             <artifactId>jboss-marshalling</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.modules</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-modules</artifactId>
         </dependency>
         <dependency>
