--- a/domain-http/error-context/pom.xml
+++ b/domain-http/error-context/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>com.seeburger.as</groupId>
         <artifactId>jboss-as-domain-http</artifactId>
-        <version>7.1.1.SEE1</version>
+        <version>7.1.1.SEE1-SNAPSHOT</version>
     </parent>
 
     <groupId>com.seeburger.as</groupId>
