--- a/spec-api/test/pom.xml
+++ b/spec-api/test/pom.xml
@@ -27,7 +27,7 @@
   <parent>
     <groupId>com.seeburger.as</groupId>
     <artifactId>jboss-as-spec-api</artifactId>
-    <version>7.1.1.SEE1</version>
+    <version>7.1.1.SEE1-SNAPSHOT</version>
   </parent>
 
   <artifactId>jboss-as-spec-api-test</artifactId>
