--- a/arquillian/pom.xml
+++ b/arquillian/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>com.seeburger.as</groupId>
         <artifactId>jboss-as-parent</artifactId>
-        <version>7.1.1.SEE2-SNAPSHOT</version>
+        <version>7.1.1.SEE1</version>
     </parent>
 
     <artifactId>jboss-as-arquillian</artifactId>
