--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
     <groupId>com.seeburger.as</groupId>
     <artifactId>jboss-as-parent</artifactId>
-    <version>7.1.1.SEE2-SNAPSHOT</version>
+    <version>7.1.1.SEE1</version>
 
     <name>JBoss Application Server: Parent Aggregator</name>
     <description>JBoss Application Server: Parent Aggregator</description>
