--- a/pom.xml
+++ b/pom.xml
@@ -312,6 +312,22 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>
+            <!-- Overwrite maven compiler argument translationFilesPath,
+                 to overcome https://issues.jboss.org/browse/AS7-1773 when built with target 1.7-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <showDeprecation>true</showDeprecation>
+                    <showWarnings>true</showWarnings>
+                    <compilerArguments>
+                        <source>${maven.compiler.argument.source}</source>
+                        <target>${maven.compiler.argument.target}</target>
+                        <AtranslationFilesPath>${project.basedir}/src/main/resources/</AtranslationFilesPath>
+                    </compilerArguments>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>buildnumber-maven-plugin</artifactId>
@@ -380,8 +396,8 @@
                         <compilerArguments>
                             <source>${maven.compiler.argument.source}</source>
                             <target>${maven.compiler.argument.target}</target>
+                            <AtranslationFilesPath>${project.basedir}/src/main/resources/</AtranslationFilesPath>
                         </compilerArguments>
-                        <compilerArgument>-AtranslationFilesPath=${project.basedir}/src/main/resources/</compilerArgument>
                     </configuration>
                 </plugin>
 
