<version.org.jboss.ejb-client>1.0.5.SEE2 <version.org.jboss.logmanager.jboss-logmanager>1.3.2.SEE1 <version.org.jboss.modules.jboss-modules>1.1.1.SEE2

--- a/host-controller/pom.xml
+++ b/host-controller/pom.xml
@@ -99,7 +99,7 @@
             <artifactId>jboss-as-threads</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.logmanager</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-logmanager</artifactId>
         </dependency>
         <dependency>
