--- a/remoting-test/pom.xml
+++ b/remoting-test/pom.xml
@@ -74,7 +74,7 @@
         <!-- Test deps -->
 
         <dependency>
-            <groupId>org.jboss.logmanager</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-logmanager</artifactId>
             <scope>test</scope>
         </dependency>
