--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -127,7 +127,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.logmanager</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-logmanager</artifactId>
             <scope>test</scope>
         </dependency>
