--- a/embedded/pom.xml
+++ b/embedded/pom.xml
@@ -79,7 +79,7 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.jboss.logmanager</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-logmanager</artifactId>
             <optional>true</optional>
         </dependency>
