--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -92,7 +92,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.logmanager</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-logmanager</artifactId>
         </dependency>
 
@@ -106,12 +106,12 @@
             <artifactId>jboss-as-subsystem-test</artifactId>
             <scope>test</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <scope>test</scope>
         </dependency>
-        
+
     </dependencies>
 </project>
