--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
         <version.org.jboss.classfilewriter>1.0.1.Final</version.org.jboss.classfilewriter>
         <version.org.jboss.common-core>2.2.17.GA</version.org.jboss.common-core>
         <version.org.jboss.com.sun.httpserver>1.0.0.Final</version.org.jboss.com.sun.httpserver>
-        <version.org.jboss.ejb-client>1.0.5.SEE1</version.org.jboss.ejb-client>
+        <version.org.jboss.ejb-client>1.0.5.SEE2</version.org.jboss.ejb-client>
         <version.org.jboss.ejb3.ext-api>2.0.0</version.org.jboss.ejb3.ext-api>
         <version.org.jboss.iiop-client>1.0.0.Final</version.org.jboss.iiop-client>
         <version.org.jboss.interceptor>2.0.0.Final</version.org.jboss.interceptor>
@@ -164,13 +164,13 @@
         <version.org.jboss.jsfunit>2.0.0.Beta1</version.org.jboss.jsfunit>
         <version.org.jboss.logging.jboss-logging>3.1.0.GA</version.org.jboss.logging.jboss-logging>
         <version.org.jboss.logging.jboss-logging-processor>1.0.0.Final</version.org.jboss.logging.jboss-logging-processor>
-        <version.org.jboss.logmanager.jboss-logmanager>1.2.2.GA</version.org.jboss.logmanager.jboss-logmanager>
+        <version.org.jboss.logmanager.jboss-logmanager>1.3.2.SEE1</version.org.jboss.logmanager.jboss-logmanager>
         <version.org.jboss.logmanager.jboss-logmanager-log4j>1.0.0.GA</version.org.jboss.logmanager.jboss-logmanager-log4j>
         <version.org.jboss.marshalling.jboss-marshalling>1.3.15.GA</version.org.jboss.marshalling.jboss-marshalling>
         <version.org.jboss.marshalling.jboss-marshalling-river>1.3.15.GA</version.org.jboss.marshalling.jboss-marshalling-river>
         <version.org.jboss.metadata>7.0.1.Final</version.org.jboss.metadata>
         <version.org.jboss.mod_cluster>1.2.0.Final</version.org.jboss.mod_cluster>
-        <version.org.jboss.modules.jboss-modules>1.1.1.SEE1</version.org.jboss.modules.jboss-modules>
+        <version.org.jboss.modules.jboss-modules>1.1.1.SEE2</version.org.jboss.modules.jboss-modules>
         <version.org.jboss.msc.jboss-msc>1.0.2.SEE1</version.org.jboss.msc.jboss-msc>
         <version.org.jboss.netty>3.2.6.Final</version.org.jboss.netty>
         <version.org.jboss.osgi.framework>1.1.8.Final</version.org.jboss.osgi.framework>
@@ -478,7 +478,7 @@
                                             <exclude>org.jboss.logging:jboss-logging-generator</exclude>
                                             <exclude>org.jboss.logging:jboss-logging-log4j</exclude>
                                             <exclude>org.jboss.logging:jboss-logging-jdk</exclude>
-                                            <exclude>org.jboss.logging:jboss-logging-logmanager</exclude>
+                                            <exclude>com.seeburger.as:jboss-logging-logmanager</exclude>
                                             <exclude>org.jboss.logging:jboss-logging-spi</exclude>
                                             <exclude>org.jboss.logging:jboss-logging-tools</exclude>
                                             <exclude>org.jboss.security:jbosssx</exclude>
@@ -3798,7 +3798,7 @@
                         <artifactId>jcommon</artifactId>
                     </exclusion>
                     <exclusion>
-                        <groupId>org.jboss.logmanager</groupId>
+                        <groupId>com.seeburger.as</groupId>
                         <artifactId>jboss-logmanager</artifactId>
                     </exclusion>
                     <exclusion>
@@ -3938,7 +3938,7 @@
                         <artifactId>jcommon</artifactId>
                     </exclusion>
                     <exclusion>
-                        <groupId>org.jboss.logmanager</groupId>
+                        <groupId>com.seeburger.as</groupId>
                         <artifactId>jboss-logmanager</artifactId>
                     </exclusion>
                     <exclusion>
@@ -4194,7 +4194,7 @@
                         <artifactId>jcommon</artifactId>
                     </exclusion>
                     <exclusion>
-                        <groupId>org.jboss.logmanager</groupId>
+                        <groupId>com.seeburger.as</groupId>
                         <artifactId>jboss-logmanager</artifactId>
                     </exclusion>
                     <exclusion>
@@ -4301,7 +4301,7 @@
             </dependency>
 
             <dependency>
-                <groupId>org.jboss.logmanager</groupId>
+                <groupId>com.seeburger.as</groupId>
                 <artifactId>jboss-logmanager</artifactId>
                 <version>${version.org.jboss.logmanager.jboss-logmanager}</version>
             </dependency>
