--- a/process-controller/pom.xml
+++ b/process-controller/pom.xml
@@ -73,7 +73,7 @@
             <artifactId>jboss-logging</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.logmanager</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-logmanager</artifactId>
         </dependency>
         <dependency>
