--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -38,7 +38,7 @@
         <test.level>INFO</test.level>
     </properties>
 
-    <dependencies>    
+    <dependencies>
         <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
@@ -52,7 +52,7 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.jboss.logmanager</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-logmanager</artifactId>
             <scope>test</scope>
         </dependency>
