--- a/server/pom.xml
+++ b/server/pom.xml
@@ -104,7 +104,7 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.jboss.logmanager</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-logmanager</artifactId>
         </dependency>
         <dependency>
