--- a/threads/pom.xml
+++ b/threads/pom.xml
@@ -104,7 +104,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.logmanager</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jboss-logmanager</artifactId>
             <scope>test</scope>
         </dependency>
