--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,7 @@
         <version.org.jboss.osgi.metadata>2.0.3.Final</version.org.jboss.osgi.metadata>
         <version.org.jboss.osgi.repository>1.0.5</version.org.jboss.osgi.repository>
         <version.org.jboss.osgi.spi>3.0.1.Final</version.org.jboss.osgi.spi>
+        <version.org.jboss.osgi.vfs>1.2.1.Final</version.org.jboss.osgi.vfs>
         <version.org.jboss.remote-naming>1.0.4.Final</version.org.jboss.remote-naming>
         <version.org.jboss.remoting3>3.2.3.GA</version.org.jboss.remoting3>
         <version.org.jboss.remotingjmx.remoting-jmx>1.0.2.Final</version.org.jboss.remotingjmx.remoting-jmx>
@@ -4432,6 +4433,18 @@
                         <artifactId>args4j</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.osgi.vfs</groupId>
+                <artifactId>jbosgi-vfs</artifactId>
+                <version>${version.org.jboss.osgi.vfs}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jboss.osgi.vfs</groupId>
+                <artifactId>jbosgi-vfs30</artifactId>
+                <version>${version.org.jboss.osgi.vfs}</version>
             </dependency>
 
             <dependency>
