Backport of https://issues.jboss.org/browse/AS7-4386 Add the ability to set a global default distinct name

--- a/ejb3/src/main/resources/org/jboss/as/ejb3/subsystem/LocalDescriptions.properties
+++ b/ejb3/src/main/resources/org/jboss/as/ejb3/subsystem/LocalDescriptions.properties
@@ -1,5 +1,6 @@
 ejb3=The configuration of the ejb3 subsystem.
 ejb3.add=Adds the ejb3 subsystem.
+ejb3.enable-statistics=If set to true, enable the collection of invocation statistics.
 ejb3.remove=Removes the ejb3 subsystem.
 ejb3.lite=Specifies whether the ejb3 container need only provide the "LITE" profile of the specification. This value should only be false when using the "everything" distro.
 ejb3.default-clustered-sfsb-cache=Name of the default stateful bean cache, which will be applicable to all clustered stateful EJBs, unless overridden at the deployment or bean level
@@ -12,6 +13,7 @@ ejb3.default-slsb-instance-pool=Name of the default stateless bean instance pool
 ejb3.default-stateful-bean-access-timeout=The default access timeout for stateful beans
 ejb3.default-singleton-bean-access-timeout=The default access timeout for singleton beans
 ejb3.in-vm-remote-interface-invocation-pass-by-value=If set to false, the parameters to invocations on remote interface of an EJB, will be passed by reference. Else, the parameters will be passed by value.
+ejb3.default-distinct-name=The default distinct name that is applied to every EJB deployed on this server
 
 
 service=Centrally configurable services that are part of the EJB3 subsystem.
