--- a/transactions/pom.xml
+++ b/transactions/pom.xml
@@ -53,11 +53,11 @@
             <artifactId>jboss-transaction-spi</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.jbossts</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jbossjts</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.jbossts</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jbossjts-integration</artifactId>
         </dependency>
 
