--- a/xts/pom.xml
+++ b/xts/pom.xml
@@ -71,7 +71,7 @@
             <artifactId>jboss-as-security</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.jbossts</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>jbossjts</artifactId>
         </dependency>
         <dependency>
